# Game-Box-Classics

./: README.md
road_hunter/: .gitignore  README.md  main.py  pyproject.toml
road_hunter/road_hunter/: __init__.py  __main__.py  app.py  config.py  game.py  input_handler.py  models.py  renderer.py
road_hunter/tests/: test_game.py
snake/: README.md  __init__.py  __main__.py  app.py  config.py  main.py  pyproject.toml
snake/snake/: game.py  input_handler.py  models.py  renderer.py
snake/tests/: test_game.py
sudoku/: .gitignore  README.md  main.py  requirements.txt
sudoku/sudoku/: constants.py  controller.py  engine.py  gui.py
sudoku/tests/: test_engine.py
tetris/: .gitignore  README.md  main.py  pyproject.toml
tetris/tests/: test_game.py
tetris/tetris/: __init__.py  __main__.py  app.py  config.py  game.py  input_handler.py  models.py  renderer.py
wordle/: .gitignore  README.md  main.py  pyproject.toml
wordle/data/: answers.txt  valid_words.txt
wordle/tests/: test_dictionary.py  test_evaluator.py
wordle/wordle/: __init__.py  __main__.py  app.py  config.py  dictionary.py  evaluator.py  input_handler.py  models.py  renderer.py
