[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nokia-snake"
version = "1.0.0"
description = "Classic Nokia-style Snake game built with pygame"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
]

[project.scripts]
snake = "snake.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["snake*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
