[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "classic-tetris"
version = "1.0.0"
description = "Classic Tetris game built with pygame"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
]

[project.scripts]
tetris = "tetris.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tetris*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
