[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wordle-clone"
version = "1.0.0"
description = "A local Wordle-style word game built with pygame"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
]

[project.scripts]
wordle = "wordle.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wordle*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
